Name:               hashtables
Version:            0.1
Cabal-Version:      >= 1.2
Category:           Data Structures
Synopsis:           A selection of hashtables
Description:        A variety of hashtables derived from Data.HashTable. In particular, this package offers a hashtable
                    that does not require the IO monad in order to be used.
License:            BSD3
License-File:       LICENSE
Extra-Source-Files: README.textile
Author:             Max Bolingbroke
Maintainer:         batterseapower@hotmail.com
Homepage:           http://github.com/batterseapower/hashtables
Build-Type:         Simple

Flag SplitBase
        Description:    Choose the new smaller, split-up base package
        Default:        True


Library
        Exposed-Modules:        Data.Hashable
                                Data.HashTable.Array
        
        Other-Modules:          
        
        if flag(splitBase)
                Build-Depends:  base >= 3, containers >= 0.1.0.1, array >= 0.1
        else
                Build-Depends:  base < 3
        
        Extensions:             PatternSignatures
        
        Ghc-Options:            -Wall